--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,21 +10,23 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
-    "@expo/webpack-config": "^0.17.2",
-    "expo": "~47.0.12",
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "^47.0.13",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "tailwind": "^4.0.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwind": "^2.2.0",
     "typescript": "^4.6.3"
   },
   "private": true
